--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
       "json5@0.x": ">=1.0.2",
       "@mendix/pluggable-widgets-tools>typescript@4": "5.0.4",
       "@mendix/pluggable-widgets-tools>ts-node@9": "^10.9.1",
-      "@tinymce/tinymce-react": "https://github.com/uicontent/tinymce-react/releases/download/5.1.0-rc/tinymce-tinymce-react-5.1.0-rc.tgz"
+      "quill": "^2.0.2"
     },
     "patchedDependencies": {
       "react-big-calendar@0.19.2": "patches/react-big-calendar@0.19.2.patch",
