--- a/packages/pluggableWidgets/rich-text-web/package.json
+++ b/packages/pluggableWidgets/rich-text-web/package.json
@@ -30,7 +30,7 @@
     "build": "cross-env MPKOUTPUT=RichText.mpk pluggable-widgets-tools build:web",
     "format": "prettier --write .",
     "lint": "eslint --ext .jsx,.js,.ts,.tsx src/",
-    "test": "pluggable-widgets-tools test:unit:web",
+    "test": "jest --projects jest.config.js",
     "release": "cross-env MPKOUTPUT=RichText.mpk pluggable-widgets-tools release:web",
     "create-gh-release": "rui-create-gh-release",
     "publish-marketplace": "rui-publish-marketplace",
