--- a/.github/workflows/BuildJobs.yml
+++ b/.github/workflows/BuildJobs.yml
@@ -154,7 +154,22 @@ jobs:
             turbo-cache-${{ runner.os }}-e2e-chunk-${{ matrix.index }}
       - name: Install dependencies
         run: pnpm install
+
+      - name: Store Playwright's Version
+        run: |
+          PLAYWRIGHT_VERSION=$(pnpm ls @playwright/test --depth=0 | awk -F'@playwright/test ' '/playwright/ {print $NF}')
+          echo "Playwright's Version: $PLAYWRIGHT_VERSION"
+          echo "PLAYWRIGHT_VERSION=$PLAYWRIGHT_VERSION" >> $GITHUB_ENV
+
+      - name: Cache Playwright Browsers for Playwright's Version
+        id: cache-playwright-browsers
+        uses: actions/cache@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9 # v4.0.2
+        with:
+          path: ~/.cache/ms-playwright
+          key: playwright-browsers-${{ env.PLAYWRIGHT_VERSION }}
+
       - name: Install Playwright Browsers
+        if: steps.cache-playwright-browsers.outputs.cache-hit != 'true'
         run: pnpm exec playwright install --with-deps chromium
       - name: "Executing E2E tests"
         env:
