--- a/automation/run-e2e/package.json
+++ b/automation/run-e2e/package.json
@@ -22,6 +22,7 @@
     "report:generate": "marge report.json --charts true"
   },
   "dependencies": {
+    "@estruyf/github-actions-reporter": "^1.7.0",
     "ansi-colors": "^4.1.3",
     "cross-zip": "^4.0.0",
     "enquirer": "^2.3.6",
