--- a/.github/workflows/BuildJobs.yml
+++ b/.github/workflows/BuildJobs.yml
@@ -157,7 +157,7 @@ jobs:
 
       - name: Store Playwright's Version
         run: |
-          PLAYWRIGHT_VERSION=$(pnpm ls @playwright/test --depth=0 | awk -F'@playwright/test ' '/playwright/ {print $NF}')
+          PLAYWRIGHT_VERSION=$(pnpm ls @playwright/test --depth=0 | grep @playwright | sed 's/.*@//')
           echo "Playwright's Version: $PLAYWRIGHT_VERSION"
           echo "PLAYWRIGHT_VERSION=$PLAYWRIGHT_VERSION" >> $GITHUB_ENV
 
@@ -176,6 +176,11 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: >-
           node  ./automation/run-e2e/bin/run-e2e-in-chunks.mjs --chunks 3 --index ${{ matrix.index }} --event-name ${{ github.event_name }}
+      - name: "Generating Github Test Summary"
+        run: |
+          pnpm --filter run-e2e run report:merge
+          pnpm dlx github-actions-ctrf ./automation/run-e2e/ctrf/merged-report.json
+        if: always() 
       - name: "Fixing files permissions"
         if: failure()
         run: |
