--- a/automation/run-e2e/package.json
+++ b/automation/run-e2e/package.json
@@ -18,11 +18,9 @@
   "scripts": {
     "lint": "eslint --ext .mjs .",
     "format": "prettier --write .",
-    "report:merge": "mochawesome-merge ../../packages/pluggableWidgets/*/cypress/results/*.json -o report.json",
-    "report:generate": "marge report.json --charts true"
+    "report:merge": "pnpm dlx ctrf merge ctrf --output merged-report.json --keep-reports"
   },
   "dependencies": {
-    "@estruyf/github-actions-reporter": "^1.7.0",
     "ansi-colors": "^4.1.3",
     "cross-zip": "^4.0.0",
     "enquirer": "^2.3.6",
@@ -41,6 +39,7 @@
   "devDependencies": {
     "@playwright/test": "^1.44.0",
     "@types/node": "^20.12.7",
-    "eslint-plugin-playwright": "^1.6.0"
+    "eslint-plugin-playwright": "^1.6.0",
+    "playwright-ctrf-json-reporter": "^0.0.14"
   }
 }
