--- a/packages/pluggableWidgets/datagrid-text-filter-web/package.json
+++ b/packages/pluggableWidgets/datagrid-text-filter-web/package.json
@@ -45,7 +45,9 @@
     "@mendix/widget-plugin-filtering": "workspace:*",
     "@mendix/widget-plugin-hooks": "workspace:*",
     "@mendix/widget-plugin-platform": "workspace:*",
-    "classnames": "^2.3.2"
+    "classnames": "^2.3.2",
+    "mobx": "6.12.3",
+    "mobx-react-lite": "4.0.7"
   },
   "devDependencies": {
     "@mendix/automation-utils": "workspace:*",
