--- a/packages/shared/widget-plugin-filtering/package.json
+++ b/packages/shared/widget-plugin-filtering/package.json
@@ -39,9 +39,11 @@
     "@mendix/tsconfig-web-widgets": "workspace:*"
   },
   "dependencies": {
+    "@mendix/widget-plugin-external-events": "workspace:*",
+    "@mendix/widget-plugin-filter-selector": "workspace:*",
     "@mendix/widget-plugin-hooks": "workspace:*",
     "@mendix/widget-plugin-platform": "workspace:*",
-    "@mendix/widget-plugin-external-events": "workspace:*",
-    "@mendix/widget-plugin-filter-selector": "workspace:*"
+    "mobx": "6.12.3",
+    "mobx-react-lite": "4.0.7"
   }
 }
