chore(line-chart): initial attempt using apexchart

--- a/packages/shared/charts/tsconfig.build.json
+++ b/packages/shared/charts/tsconfig.build.json
@@ -1,4 +1,8 @@
 {
-    "extends": "./tsconfig.json",
-    "exclude": ["src/**/*.spec.ts", "src/**/*.test.ts", "src/rollup/*"]
+    "extends": "@mendix/tsconfig-web-widgets/esm-library-with-jsx",
+    "include": ["./src/**/*"],
+    "compilerOptions": {
+        "outDir": "./dist",
+        "rootDir": "./src"
+    }
 }
