--- a/packages/shared/charts/package.json
+++ b/packages/shared/charts/package.json
@@ -6,9 +6,6 @@
   "copyright": "© Mendix Technology BV 2023. All rights reserved.",
   "type": "module",
   "exports": {
-    ".": null,
-    "./rollup/shared-libs-config.cjs": "./dist/rollup/shared-libs-config.cjs",
-    "./ui/*": "./dist/ui/*",
     "./*": "./dist/*.js"
   },
   "typesVersions": {
@@ -26,7 +23,7 @@
     "clear": "rimraf ./dist",
     "copy": "copy-and-watch \"src/**/*.{scss,svg}\" \"dist/\"",
     "build:src": "tsc --project tsconfig.build.json",
-    "build:cfg": "tsc --project src/rollup/tsconfig.json",
+    "build:cfg": "tsc --project tsconfig.json",
     "build": "pnpm build:src && pnpm build:cfg && pnpm copy",
     "release": "pnpm build",
     "prepare": "turbo build",
@@ -42,22 +39,13 @@
     "@mendix/widget-plugin-hooks": "workspace:*",
     "@mendix/widget-plugin-platform": "workspace:*",
     "@mendix/widget-plugin-test-utils": "workspace:*",
-    "@types/plotly.js": "^2.12.30",
-    "@types/react-plotly.js": "^2.5.0",
     "copy-and-watch": "^0.1.6",
     "rimraf": "^2.7.1"
   },
   "dependencies": {
+    "apexcharts": "^3.50.0",
     "classnames": "^2.3.2",
-    "deepmerge": "^4.3.1"
-  },
-  "peerDependencies": {
-    "@rollup/plugin-commonjs": "^25.0.7",
-    "@rollup/plugin-node-resolve": "^15.2.3",
-    "@rollup/plugin-replace": "^2.4.2",
-    "@rollup/plugin-terser": "^0.4.4",
-    "plotly.js": "^2.27.1",
-    "react-plotly.js": "^2.6.0",
-    "rollup": "^2.79.1"
+    "deepmerge": "^4.3.1",
+    "react-apexcharts": "^1.4.1"
   }
 }
