--- a/packages/pluggableWidgets/gallery-web/package.json
+++ b/packages/pluggableWidgets/gallery-web/package.json
@@ -43,7 +43,9 @@
     "@mendix/widget-plugin-external-events": "workspace:*",
     "@mendix/widget-plugin-filtering": "workspace:*",
     "@mendix/widget-plugin-sorting": "workspace:*",
-    "classnames": "^2.3.2"
+    "classnames": "^2.3.2",
+    "mobx": "6.12.3",
+    "mobx-react-lite": "4.0.7"
   },
   "devDependencies": {
     "@mendix/automation-utils": "workspace:*",
