--- a/packages/shared/widget-plugin-sorting/package.json
+++ b/packages/shared/widget-plugin-sorting/package.json
@@ -9,14 +9,13 @@
     "url": "https://github.com/mendix/web-widgets.git"
   },
   "type": "module",
-  "main": "./dist/main.js",
   "exports": {
-    ".": "./dist/main.js"
+    "./*": "./dist/*.js"
   },
   "typesVersions": {
     "*": {
       "*": [
-        "./dist/main.d.ts"
+        "dist/*"
       ]
     }
   },
@@ -35,5 +34,9 @@
     "@mendix/eslint-config-web-widgets": "workspace:*",
     "@mendix/prettier-config-web-widgets": "workspace:*",
     "@mendix/tsconfig-web-widgets": "workspace:*"
+  },
+  "dependencies": {
+    "mobx": "6.12.3",
+    "mobx-react-lite": "4.0.7"
   }
 }
