--- a/packages/pluggableWidgets/rich-text-web/package.json
+++ b/packages/pluggableWidgets/rich-text-web/package.json
@@ -51,6 +51,7 @@
     "@mendix/widget-plugin-test-utils": "workspace:*",
     "@rollup/plugin-json": "^4.1.0",
     "@types/dompurify": "^2.4.0",
+    "@types/react-modal": "^3.16.3",
     "@types/sanitize-html": "^1.27.2",
     "cross-env": "^7.0.3",
     "postcss": "^8.4.21",
@@ -61,6 +62,7 @@
   "dependencies": {
     "classnames": "^2.2.6",
     "dompurify": "^2.5.0",
-    "quill": "^2.0.2"
+    "quill": "^2.0.2",
+    "react-modal": "^3.16.1"
   }
 }
